Updated Project Setup Window with Resources Folder Path Updated Readme and Images

--- a/Assets/Addons/UnityTerminal/Editor/UnityTerminal.asmdef
+++ b/Assets/Addons/UnityTerminal/Editor/UnityTerminal.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "UnityTerminal",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:91d4f638a9ba2a54fa915d70b8ddaf1d"
+    ],
     "includePlatforms": [
         "Editor"
     ],
