--- a/Assets/Addons/UnityTerminal/Editor/UnityTerminal.asmdef
+++ b/Assets/Addons/UnityTerminal/Editor/UnityTerminal.asmdef
@@ -2,11 +2,9 @@
     "name": "UnityTerminal",
     "rootNamespace": "",
     "references": [
-        "GUID:91d4f638a9ba2a54fa915d70b8ddaf1d"
+        "GUID:5aa093e9b9c1d7c41b62f4a4dc3766b3"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
