--- a/Assets/Addons/LazyJedi-Extras/Scripts/Runtime/LazyJedi.Extras.asmdef
+++ b/Assets/Addons/LazyJedi-Extras/Scripts/Runtime/LazyJedi.Extras.asmdef
@@ -1,4 +1,16 @@
 {
-	"name": "LazyJedi.Extras",
-	"references":[ "GUID:ac403b1a1d4fb554289021d7562800ba" ]
+    "name": "LazyJedi.Extras",
+    "rootNamespace": "",
+    "references": [
+        "GUID:ac403b1a1d4fb554289021d7562800ba"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
