--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,9 +2,10 @@
   "dependencies": {
     "com.unity.ide.rider": "3.0.24",
     "com.unity.ide.visualstudio": "2.0.18",
-    "com.unity.services.cloudsave": "2.0.1",
+    "com.unity.services.cloudsave": "2.2.1",
     "com.unity.test-framework": "1.3.7",
     "com.unity.textmeshpro": "3.0.6",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
