--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
-    "com.unity.ide.rider": "3.0.24",
-    "com.unity.ide.visualstudio": "2.0.18",
+    "com.unity.feature.2d": "2.0.0",
+    "com.unity.ide.rider": "3.0.25",
+    "com.unity.ide.visualstudio": "2.0.21",
     "com.unity.services.cloudsave": "2.2.1",
     "com.unity.test-framework": "1.3.7",
     "com.unity.textmeshpro": "3.0.6",
