--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-    "com.unity.ai.navigation": "2.0.3",
     "com.unity.feature.2d": "2.0.1",
-    "com.unity.ide.rider": "3.0.31",
+    "com.unity.ide.rider": "3.0.34",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.multiplayer.center": "1.0.0",
     "com.unity.services.cloudsave": "3.1.0",
     "com.unity.test-framework": "1.4.5",
-    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.9",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.10",
     "com.unity.ugui": "2.0.0",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
